# cloudformation-stack-destroyer

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: main.yml
cdk/: example_stack.py  stack.py
function/: destroyer.py  handler.py
tests/: conftest.py
tests/unit/: test_stack.py
tests/unit/function/: test_delete_stack.py  test_get_stacks.py  test_handler.py  test_is_deletable.py  test_is_static_state.py  test_is_tagged.py
